# iter2

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  setup.py
iter2/: __init__.py  option.py  sequence_builders.py  utils.py  wrapped_algorithms.py
iter2/algorithms/: __init__.py  base.py  extra.py  folding.py  merging.py  predicate_on_sequence.py  searching.py  sequence_to_groups.py  sequence_to_sequence.py  splitting.py
iter2/iterators/: __init__.py  iterator2.py  spy_iterator.py
tests/: _hypothesis_strategies.py  conftest.py  option.py
tests/algorithms/: __init__.py  _failing_iterator.py  extra.py  folding.py  merging.py  predicate_on_sequence.py  searching.py  sequence_to_groups.py  sequence_to_sequence.py  splitting.py  test_enumerating.py  test_filtering.py
tests/algorithms/folding/: test_collecting_first_and_last_items.py  test_consuming.py  test_count.py  test_cumulative_folding_and_unfolding.py  test_deduping.py  test_fold.py
tests/algorithms/generating/: test_cartesian_product.py  test_count_from.py  test_repeating.py
tests/algorithms/groupping/: test_groupping_consecutive.py  test_groupping_globally.py  test_groupping_sized_chunks.py  test_groupping_sliding_window.py
tests/algorithms/merging/: test_alternating.py  test_chaining.py  test_zipping.py
tests/algorithms/searching/: test_min_and_max.py  (+1 more)
tests/boxed_values/: test_box.py  test_option.py
tests/iterators/: iterator2.py
tests/operators/: test_call.py  test_comparison.py  test_contains.py  test_get_item.py  test_is_instance_of.py  test_mapping.py  test_pipe_and_compose.py
(+5 files in other folders)
